main/default/objects/Training_Plan_Section__c/Training_Plan_Section__c.object-meta.xml
<CustomObject>
    <label>Training Plan Section</label>
    <nameField>
        <label>Training Plan Section Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Ii0000000oHAqEAM_00Ni000000AYfELEA1</fullName>
        <active>true</active>
        <errorMessage>The section must belong to the current Training Plan</errorMessage>
        <field>Training_Plan_Achievement__c.Training_Plan_Section__c</field>
        <filterItems>
            <field>Training_Plan_Section__c.Training_Plan__c</field>
            <operation>equals</operation>
            <valueField>$Source.Training_Plan__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Training Plan Achievement_Training Plan</name>
        <sourceObject>Training_Plan_Achievement__c</sourceObject>
    </namedFilters>
    <pluralLabel>Training Plan Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>