main/default/objects/Training_Plan_Section__c/fields/Optional__c.field-meta.xml
<CustomField>
    <fullName>Optional__c</fullName>
    <inlineHelpText>Enable this option if you plan to make all the items under this section optional</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>