main/default/objects/Training_Plan_Section__c/fields/Total_Section_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Section_Items__c</fullName>
    <label>Total Section Items</label>
    <summaryForeignKey>Training_Plan_Section_Item__c.Training_Plan_Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>